--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-hot-toast": "^2.4.1",
     "react-speech-recognition": "^3.10.0",
+    "react-toastify": "^11.0.2",
     "react-webcam": "^7.2.0",
     "recorder": "^0.0.1",
     "sonner": "^1.7.1",
